# jet_ism

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/jet_ism/: __init__.py  styles.py
src/jet_ism/blackholes/: __init__.py  accretion.py  bh_info.py
src/jet_ism/gas/: __init__.py  general.py  plots.py
src/jet_ism/maps/: __init__.py  base.py  get_channel.py  manypanels.py  onepanel.py  slice.py
src/jet_ism/mock/: soxso.py  xray.py
src/jet_ism/outflows/: __init__.py  distributions.py  fluxes.py  plots.py
src/jet_ism/propagation/: __init__.py  distances.py  plots.py  rampressure.py  volume.py
src/jet_ism/selfconsistent/: __init__.py  accretion.py
src/jet_ism/stars/: __init__.py  general.py  plots.py  sfr.py
tests/: conftest.py  test_gas_general.py
